--- a/pretix-borderland/Makefile
+++ b/pretix-borderland/Makefile
@@ -1,10 +1,9 @@
 all: localecompile
-LNGS:=`find pretix_borderland/locale/ -mindepth 1 -maxdepth 1 -type d -printf "-l %f "`
 
 localecompile:
 	django-admin compilemessages
 
 localegen:
-	django-admin makemessages --keep-pot -i build -i dist -i "*egg*" $(LNGS)
+	django-admin makemessages --keep-pot -i build -i dist -i "*egg*" -l en_BL
 
 .PHONY: all localecompile localegen
