adding a simple test for the lottery registration
obs: it still doesn't work properly, under the setup, but that is
because we need some fixture data for a dummy borderland event.

Note also that these tests are really heavy and slow to load and start.
It is not worthy to have just one test, but one step at a time.

--- a/pretix-borderland/Makefile
+++ b/pretix-borderland/Makefile
@@ -22,6 +22,11 @@ build: env
 	@cd $(PRETIX_DEVENV); pipenv run pip3 install $(PLUGIN_DIR)
 	@echo "To run Membertix in dev mode run:\n\tsh scripts/local-django.sh runserver\n"
 
+.PHONY: test
+test:
+	@cd $(PRETIX_DEVENV); pipenv run pip3 install $(PLUGIN_DIR)
+	@sh scripts/local-pytest.sh pretix_borderland
+
 .PHONY: clean
 clean:
 	rm -rf build
