make the installer scripts to work with pretix 2024.01

--- a/pretix-borderland/Makefile
+++ b/pretix-borderland/Makefile
@@ -1,33 +1,37 @@
-PLUGIN_DIR=$(PWD)
-PRETIX_DEVENV=$(PLUGIN_DIR)/build/pretix/src
-DJANGO=sh $(PLUGIN_DIR)/scripts/local-django.sh
+VENV=$(shell pipenv --venv)
+Command := $(firstword $(MAKECMDGOALS))
+Arguments := $(wordlist 2,$(words $(MAKECMDGOALS)),$(MAKECMDGOALS))
 
 .PHONY: all 
 all: build
 
-.PHONY: env 
-env: $(PRETIX_DEVENV) 
-	
-$(PRETIX_DEVENV):
-	@sh scripts/prepare_base_pretix_devenv.sh
-	@cd $(PRETIX_DEVENV); pipenv run pip3 wheel -e $(PLUGIN_DIR)
-	$(call DJANGO) makemessages -l en_BL
-	$(call DJANGO) compilemessages
-	$(call DJANGO) collectstatic --noinput
-	$(call DJANGO) makemigrations
-	$(call DJANGO) migrate
-
 .PHONY: build 
-build: env
-	@cd $(PRETIX_DEVENV); pipenv run pip3 wheel -e $(PLUGIN_DIR)
-	@cd $(PRETIX_DEVENV); pipenv run pip3 install $(PLUGIN_DIR)
-	@echo "To run Membertix in dev mode run:\n\tsh scripts/local-django.sh runserver\n"
+build: $(VENV)
+	@pipenv run python setup.py develop
+	@echo "\n\n\n*******************************************************************************\n"
+	@echo "Membertix build finished."
+	@echo "To run Membertix in dev mode run:"
+	@echo "\tsh pipenv run python -m pretix runserver\n"
+
+$(VENV): 
+	@sh scripts/prepare_base_pretix_devenv.sh
+
+.PHONY: run
+run: 
+	@pipenv run python -m pretix runserver
+
+.PHONY: membertix pretix django
+membertix pretix django: 
+	@pipenv run python -m pretix "$(Arguments)"
+
 
 .PHONY: test
 test:
-	@cd $(PRETIX_DEVENV); pipenv run pip3 install $(PLUGIN_DIR)
-	@sh scripts/local-test.sh pretix_borderland
+	@pipenv run python -m pretix test
 
 .PHONY: clean
 clean:
-	rm -rf build
+	@pipenv -rm
+
+%::
+	@true
