Delete prepare script, rely fully on the makefile

--- a/pretix-borderland/Makefile
+++ b/pretix-borderland/Makefile
@@ -1,6 +1,14 @@
-VENV=$(shell pipenv --venv)
+PRETIX_TAG=v2024.1.0
+
 Command := $(firstword $(MAKECMDGOALS))
 Arguments := $(wordlist 2,$(words $(MAKECMDGOALS)),$(MAKECMDGOALS))
+
+VENV=$(shell pipenv --venv 2> /dev/null)
+ifeq ($(VENV),)
+VENV:= download_pretix
+else
+VENV:=
+endif
 
 .PHONY: all 
 all: build
@@ -9,12 +17,17 @@ all: build
 build: $(VENV)
 	@pipenv run python setup.py develop
 	@echo "\n\n\n*******************************************************************************\n"
-	@echo "Membertix build finished."
+	@printf 'Membertix build \e[1;32mfinished\e[0m.\n'
 	@echo "To run Membertix in dev mode run:"
-	@echo "\tsh pipenv run python -m pretix runserver\n"
+	@printf '\t\e[1mpipenv run python -m pretix runserver\e[0m\n\n'
 
-$(VENV): 
-	@sh scripts/prepare_base_pretix_devenv.sh
+.PHONY: download_pretix
+download_pretix:
+	@echo Downloading pretix ...
+	pipenv --python 3.11.2 run pip3 install -U "git+https://github.com/pretix/pretix.git@$(PRETIX_TAG)#egg=pretix"
+	pipenv run python -m pretix migrate
+	pipenv run python -m pretix rebuild
+	pipenv run python -m pretix updatestyles
 
 .PHONY: run
 run: 
@@ -31,7 +44,7 @@ test:
 
 .PHONY: clean
 clean:
-	@pipenv -rm
+	@pipenv --rm
 
 %::
 	@true
